PharmaDemo/src/objects/Stock_Product__c.object
<CustomObject>
    <fields>
        <fullName>Brand_Type__c</fullName>
        <label>Brand Type</label>
        <picklist>
            <controllingField>Product_Type__c</controllingField>
            <picklistValues>
                <fullName>ALLI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLI DISPLAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALLI PROMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIQUITIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIQUITIN DISPLAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NIQUITIN PROMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LACTACYD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PANADOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PANADOL DISPLAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZOVIRAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZOVIRAX DISPLAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZOVIRAX PROMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COREGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COREGA DISPLAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COREGA PROMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SENSODYNE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SENSODYNE PROMO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SENSODYNE DISPLAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARODONTAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGRIPHINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAAPREP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VALDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CORSODYL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREATHE RIGHT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BREATHE RIGHT DISPLAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOTENE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIOTENE DISPLAY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Alli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niquitin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lactacyd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panadol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zovirax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corega</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smoking Cessation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analgesic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coughs and Colds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Stock Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>